crates/components/tests/snapshots/components__clock_1x1_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(c.as_ref(), &store, &th, size)"
---
size: 17x8
tier: mini
view:
  text:
    - - bold: true
        role: AccentSecondary
        s: "00:00"
