crates/components/tests/snapshots/components__clock_6x3_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(c.as_ref(), &store, &th, size)"
---
size: 122x31
tier: big
view:
  big:
    role: AccentSecondary
    text: "00:00"
