crates/components/tests/snapshots/components__clock_zoom_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(c.as_ref(), &store, &th, size)"
---
size: 248x66
tier: big
view:
  big:
    role: AccentSecondary
    text: "00:00"
