crates/components/tests/snapshots/components__disk_1x1_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(c.as_mut(), &store, &th, size)"
---
size: 17x8
tier: rates
view:
  stack:
    children:
      - - Len(1)
        - text:
            - - bold: false
                role: Ok
                s: ●
              - bold: false
                role: AccentPrimary
                s: " 56%"
              - bold: false
                role: TextMuted
                s: " nvme0n1"
      - - Len(1)
        - text:
            - - bold: false
                role: AccentPrimary
                s: "rd "
              - bold: true
                role: Text
                s: 998M
      - - Len(1)
        - text:
            - - bold: false
                role: AccentSecondary
                s: "wr "
              - bold: true
                role: Text
                s: 241M
    dir: V
