crates/components/tests/snapshots/components__disk_2x1_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(c.as_mut(), &store, &th, size)"
---
size: 38x8
tier: table
view:
  stack:
    children:
      - - Fill(1)
        - table:
            columns:
              - DEVICE
              - READ
              - WRITE
              - BUSY
            rows:
              - - ● nvme0n1
                - 998M
                - 200M
                - 56%
              - - ● nvme0n1p2
                - 0B
                - 4.0M
                - 4%
              - - ● nvme1n1
                - 78k
                - 459k
                - 0%
              - - ○ nvme2n1
                - 0B
                - 0B
                - 0%
              - - · sda
                - —
                - —
                - —
            scroll: 0
            selected: ~
            sort: ~
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: 4 devices · 1 partition · sort traffic · s sort
    dir: V
