crates/components/tests/snapshots/components__disk_6x3_at_120x40_dense.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(c.as_mut(), &store, &th, size)"
---
size: 59x18
tier: chart
view:
  stack:
    children:
      - - Len(6)
        - table:
            columns:
              - DEVICE
              - READ
              - WRITE
              - BUSY
              - °C
              - R/S
              - W/S
            rows:
              - - ● nvme0n1
                - 998M
                - 200M
                - 56%
                - 50°
                - "7614"
                - "3052"
              - - ● nvme0n1p2
                - 0B
                - 4.0M
                - 4%
                - 50°
                - "0"
                - "121"
              - - ● nvme1n1
                - 78k
                - 459k
                - 0%
                - 47°
                - "1"
                - "14"
              - - ○ nvme2n1
                - 0B
                - 0B
                - 0%
                - 37°
                - "0"
                - "0"
              - - · sda
                - —
                - —
                - —
                - —
                - —
                - —
            scroll: 0
            selected: ~
            sort: ~
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: "series "
              - bold: true
                role: Text
                s: read
              - bold: false
                role: TextMuted
                s: " over 60 s  "
              - bold: false
                role: AccentPrimary
                s: "1 read "
              - bold: false
                role: TextGhost
                s: "2 write "
              - bold: false
                role: TextGhost
                s: "3 busy "
              - bold: false
                role: TextGhost
                s: "4 queue "
      - - Fill(1)
        - chart:
            - label: nvme0n1
              points: 39
            - label: nvme0n1p2
              points: 39
            - label: nvme1n1
              points: 39
            - label: nvme2n1
              points: 39
            - label: sda
              points: 29
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: "await "
              - bold: false
                role: Text
                s: "nvme0n1 "
              - bold: false
                role: AccentPrimary
                s: r 0.80 ms
              - bold: false
                role: AccentSecondary
                s: "  w 5.40 ms"
              - bold: false
                role: TextGhost
                s: " · "
              - bold: false
                role: Text
                s: "nvme0n1p2 "
              - bold: false
                role: AccentPrimary
                s: r —
              - bold: false
                role: AccentSecondary
                s: "  w 1.80 ms"
              - bold: false
                role: TextGhost
                s: " · "
              - bold: false
                role: Text
                s: "nvme1n1 "
              - bold: false
                role: AccentPrimary
                s: r 0.20 ms
              - bold: false
                role: AccentSecondary
                s: "  w 0.60 ms"
              - bold: false
                role: TextGhost
                s: " · "
              - bold: false
                role: Text
                s: "nvme2n1 "
              - bold: false
                role: AccentPrimary
                s: r —
              - bold: false
                role: AccentSecondary
                s: "  w —"
              - bold: false
                role: TextGhost
                s: " · "
              - bold: false
                role: Text
                s: "sda "
              - bold: false
                role: AccentPrimary
                s: r —
              - bold: false
                role: AccentSecondary
                s: "  w —"
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: 4 devices · 1 partition · sort traffic · s sort
    dir: V
